# maturin-publish

./: .gitignore  Cargo.toml
.github/workflows/: CI.Ayml  publish.yml
src/: lib.rs
