[package]
name = "maturin-publish"
version = "0.2.0"
edition = "2021"

[lib]
name = "maturin_publish"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module"] }